infra/modules/Network/vpc.tf
resource "aws_vpc" "eks_vpc" {
  cidr_block           = var.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "jotacloud-vpc"
  }
}
